# atm

./: 2024 BH 低层大气红外吸收透过率计算模型_王志会(1).txt  Atmosphere.cpp  Atmosphere.h  LowtranModel.cpp  LowtranModel.h  README.md  README_model.md  atm_input_case1.txt  atm_input_case10.txt  atm_input_case2.txt  atm_input_case3.txt  atm_input_case4.txt  atm_input_case5.txt  atm_input_case6.txt  atm_input_case7.txt  atm_input_case8.txt  atm_input_case9.txt  compare_cases.csv  compare_cases_5_8um.csv  compare_lowtran.py  compare_lowtran_5_8um.py  compare_result_5_8um.csv  generate_5_8um_cases.py  gui.py  main.cpp  test.cpp  不同温度下饱和蒸汽压力及水含量对照表.xlsx  工作簿1.csv
include/: Atmosphere.h
installer/: atm.iss  build_installer.ps1
lowtran7/: Lowtran7使用方法.docx  TAPE6  TAPE7  TAPE8  Tape5  通过Tape5得到的数据
lowtran7/example/: Tape5
lowtran7/run_lowtran/run_lowtran/: run_lowtran.sln
lowtran7/run_lowtran/run_lowtran/run_lowtran/: TAPE6  TAPE7  TAPE8  (+5 more)
qt_gui/: CMakeLists.txt  main.cpp  make.ps1
src/: Atmosphere.cpp  Atmosphere.h  HitranFixed_8_12.h  LowtranModel.cpp  LowtranModel.h  gui_win32.cpp  lowtran_auto.cpp  main.cpp  test.cpp  transmittance_5_8um.cpp
testdata_5_8um/: README.md  case_profile_5_8um.csv
testdata_5_8um/Tape5/: Tape5_case5_8_01  Tape5_case5_8_02  Tape5_case5_8_03  Tape5_case5_8_04  Tape5_case5_8_05  Tape5_case5_8_06  Tape5_case5_8_07  Tape5_case5_8_08  Tape5_case5_8_09  Tape5_case5_8_10
testdata_5_8um/atm_inputs/: case5_8_01.txt  case5_8_02.txt  case5_8_03.txt  case5_8_04.txt  case5_8_05.txt  case5_8_06.txt  case5_8_07.txt  case5_8_08.txt  case5_8_09.txt  case5_8_10.txt
(+12 files in other folders)
